# 0BTX125_final_report

./: .gitattributes  .gitignore  GSM1642239_Aligned.sortedByCoord.out.bam  README.md  SraRunTable.csv  Table_S3.csv  all_Multi-overlapping_counts.txt  all_Multi-overlapping_counts.txt.summary  all_counts.txt  all_counts.txt.summary  base.h5ad  cut_gene.h5ad  data_download.sh  data_qc.ipynb  mapping.sh  pyproject.toml
