[tool.poetry]
name = "final_report"
version = "0.1.0"
description = ""
authors = ["takashi-yamanashi"]

[tool.poetry.dependencies]
python = "^3.8"
scanpy = "^1.9.1"
jupyterlab = "2.3.2"
python-igraph = "^0.9.11"
louvain = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
